Fix band element border overlap with adjusted margins and height (#599)
* Reduce purple band height by 1px at the bottom

Shave 1px off the bottom of div#band while keeping text position
unchanged, using calc() to subtract from the existing em-based values.


* Fix sidebar alignment with flexbox on overband header

- Add display: flex and align-items: center to h2.overband to normalize
  element heights within the purple bar
- Adjust padding-top from 0.4em to calc(0.4em + 1px) to shift content
  down 1px as intended
- Remove the position: relative; top: 1px hack from .overband-nav that
  is no longer needed with flexbox alignment


* Shift overband text down 1px further

Increase padding-top from calc(0.4em + 1px) to calc(0.4em + 2px)
to move the purple bar text down by an additional pixel.


* Shift overband text down 1 more px

Increase padding-top from calc(0.4em + 2px) to calc(0.4em + 3px).
Verified at both desktop and mobile widths.


---------

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -815,12 +815,13 @@ div#searchbox input.image {
 h2.overband,
 div#primary h2.overband {
   color: white;
-  padding: 0.4em 0 0.25em 0;
+  padding: calc(0.4em + 3px) 0 0.25em 0;
   margin: 0;
   line-height: 1em;
   margin-bottom: 1.2em;
   font-weight: normal;
-  vertical-align: middle;
+  display: flex;
+  align-items: center;
 }
 h2.overband img.feedicon {
   vertical-align: middle;
@@ -836,8 +837,6 @@ h2.overband a {
 }
 h2.overband .overband-nav {
   font-size: 1em;
-  position: relative;
-  top: 1px;
 }
 h2.overband .overband-nav a {
   border-bottom: none;
